--- a/src/www/index.html
+++ b/src/www/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Todo</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <!-- ionic framework -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!-- app scripts -->
     <script src="js/app.js"></script>
+    <script src="js/models.js"></script>
+    <script src="js/controllers.js"></script>
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
     <script src="cordova.js"></script>
   </head>
@@ -47,35 +51,6 @@
           </ion-list>
         </ion-content>
       </ion-side-menu>
-      <script id="new-task.html" type="text/ng-template">
-        
-        <div class="modal">
-
-          <!-- Modal header bar -->
-          <ion-header-bar class="bar-secondary">
-            <h1 class="title">New Task</h1>
-            <button class="button button-clear button-positive" ng-click="closeNewTask()">Cancel</button>
-          </ion-header-bar>
-
-          <!-- Modal content area -->
-          <ion-content>
-
-            <form ng-submit="createTask(task)">
-              <div class="list">
-                <label class="item item-input">
-                  <input type="text" placeholder="What do you need to do?" ng-model="task.title">
-                </label>
-              </div>
-              <div class="padding">
-                <button type="submit" class="button button-block button-positive">Create Task</button>
-              </div>
-            </form>
-
-          </ion-content>
-
-        </div>
-
-      </script>
     </ion-side-menus>
   </body>
 </html>
