--- a/src/www/index.html
+++ b/src/www/index.html
@@ -14,42 +14,34 @@
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
     <script src="cordova.js"></script>
   </head>
-  <body ng-app="todo" ng-controller="TodoCtrl">
+  <body ng-app="todo">
     <ion-side-menus>
       <!-- Center content -->
       <ion-side-menu-content>
-        <ion-header-bar class="bar-dark">
-          <button class="button button-icon" ng-click="toggleProjects()">
-            <i class="icon ion-navicon"></i>
-          </button>
-          <h1 class="title">{{activeProject.title}}</h1>
-          <!-- New Task button-->
-          <button class="button button-icon" ng-click="newTask()">
-            <i class="icon ion-compose"></i>
-          </button>
-        </ion-header-bar>
-        <ion-content scroll="false">
-          <ion-list>
-            <ion-item ng-repeat="task in activeProject.tasks">
-              {{task.title}}
-            </ion-item>
-          </ion-list>
-        </ion-content>
+        <!--
+          The nav bar that will be updated as we navigate between views
+          Additional attributes set its look, ion-nav-bar animation and icons
+          Icons provided by Ionicons: http://ionicons.com/
+        -->
+        <ion-nav-bar class="bar-dark">
+          <ion-nav-back-button class="button button-icon ion-chevron-left">
+          </ion-nav-back-button>
+        </ion-nav-bar>
+        <!--
+          The views will be rendered in the <ion-nav-view> directive below
+          Templates are in the /templates folder (but you could also
+          have templates inline in this html file if you'd like).
+        -->
+        <ion-nav-view name="main-content"></ion-nav-view>
       </ion-side-menu-content>
       <!-- Left menu -->
       <ion-side-menu side="left">
-        <ion-header-bar class="bar-dark">
-          <h1 class="title">Projects</h1>
-          <button class="button button-icon ion-plus" ng-click="newProject()">
-          </button>
-        </ion-header-bar>
-        <ion-content scroll="false">
-          <ion-list>
-            <ion-item ng-repeat="project in projects" ng-click="selectProject(project, $index)" ng-class="{active: activeProject == project}">
-              {{project.title}}
-            </ion-item>
-          </ion-list>
-        </ion-content>
+        <!--
+          The views will be rendered in the <ion-nav-view> directive below
+          Templates are in the /templates folder (but you could also
+          have templates inline in this html file if you'd like).
+        -->
+        <ion-nav-view name="main-menu"></ion-nav-view>
       </ion-side-menu>
     </ion-side-menus>
   </body>
