--- a/src/www/index.html
+++ b/src/www/index.html
@@ -7,9 +7,15 @@
     <!-- ionic framework -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!-- leafletjs -->
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <!-- app style -->
+    <link href="css/app.css" rel="stylesheet">
     <!-- app scripts -->
     <script src="js/app.js"></script>
     <script src="js/models.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
     <script src="cordova.js"></script>
